made desktop icons larger and fixed alignment.

--- a/css/main.css
+++ b/css/main.css
@@ -186,8 +186,8 @@ button {
 #desktopicons ul li button img {
     margin: auto;
     width: 50%;
-    height: 50px;
-    width: 50px;
+    height: 70px;
+    width: 70px;
 }
 
 #taskbar {
